# modern_cpp

hello_world/: CMakeLists.txt
hello_world/say_hello/: say_hello.cpp
hello_world/src/: main.cpp
hw1/task_1/: commands.sh
hw1/task_2a/: CMakeLists.txt  build.sh
hw1/task_2b/: CMakeLists.txt  install.sh
hw2/: CMakeLists.txt  task_1.cpp  task_2.cpp
